# SpeakLearnPlayBot

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: fake_bot.py  main.py  routes.py  schemas.py
common/: config.py
config/: .env.example
data/: cases_quiz.py  odd_one_out_data.py  positive_feedback.py  russian_tutor.py  sentence_builder_questions.py  sing_along_data.py  speech_practice_quiz.py  texts_game_data.py  translate_word_quiz.py  verb_aspect_quiz.py  verb_tense_quiz.py  verb_tests_data.py  watch_video_data.py
database/: __init__.py  base.py  models.py  user_manager.py
docs/: api-reference.md  postgres-on-linux-server.md  transfer-data-to-remote-db.md
games/: base.py  odd_one_out.py  roleplay_game.py  russian_cases_quiz.py  russian_tutor.py  sentence_builder.py  session_manager.py  sing_along.py  speech_practice_quiz.py  texts.py  translate_word_quiz.py  translator_game.py  verb_aspect_quiz.py  verb_tense_quiz.py  verb_tests_quiz.py
handlers/admin/: __init__.py
handlers/shared/: start.py
handlers/user/: game_handlers.py
keyboards/: main_menu.py
locales/: ar.json  en.json  es.json  fa.json  fr.json  ja.json  vi.json  zh.json
models/ref_audio/: README.md  ref_text.txt  transcript.txt
scripts/: migrate_streak.py
static/streak/: index.html
tests/: test_f5_tts.py
utils/: __init__.py  bot_helpers.py  hf_tts.py  middlewares.py  model_downloader.py  ollama_ai.py  text_to_speech.py  voice_recognition.py
